--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
 
     //FireBase
     implementation(platform("com.google.firebase:firebase-bom:32.7.1"))
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 }
